# app-python

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app_python/: hello.py
